--- a/app/src/main/res/layout/download_podcast_listitem.xml
+++ b/app/src/main/res/layout/download_podcast_listitem.xml
@@ -79,12 +79,14 @@
     <TextView
         android:id="@+id/download_description"
         android:layout_width="290dp"
-        android:layout_height="21dp"
+        android:layout_height="28dp"
         android:layout_marginTop="5dp"
         android:text=""
         android:textColor="@color/text_color_tertary"
-        android:textSize="12sp"
+        android:ellipsize="end"
         android:textStyle="bold"
+        android:maxLines="2"
+        android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
